trabajando en el responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="content">
-            <div class="menu container">
+            <div class="menu">
                 <a href="#" class="logo">logo</a>
                 <input type="checkbox" id="menu">
                 <label for="menu">
@@ -17,9 +17,9 @@
                 </label>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#hero">Inicio</a></li>
                         <li><a href="#imagenes">Servicios</a></li>
-                        <li><a href="#">Contactos</a></li>
+                        <li><a href="#contactos">Contactos</a></li>
                     </ul>
                 </nav>
             </div>
@@ -84,11 +84,11 @@
         </section>
         
     </main>
-    <footer>
-        <div>
+    <footer id="contactos" class="footer">
+        <section>
             <h4>Contactos</h4>
             <p>Lunes a Viernes de 9 a 20 hs / Sábado de 9 a 17 hs</p>
-            <p> 0810-888-3398</p>
+            <p>Atención al 0810-888-3398</p>
             <p>Dirección: Merlo, Avenida Libertador 600</p>
             <div>
                 <h4>Redes</h4>
@@ -97,7 +97,7 @@
         <a href="https://twitter.com/?lang=es"><img src="./assets/twiter.png" alt=""></a>
         <a href="https://www.whatsapp.com/"><img src="./assets/whatsapp.png" alt=""></a>
     </div>
-    </div>
+    </section>
     </footer>
 </body>
 </html>
