--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section id="hero">
             <div class="heroe">
-                <h1>Dafiti</h1>
+                <h1>dafiti</h1>
                 <p>Vivimos entrenando para ganar y conquistar a los consumidores ofreciendo una experiencia premium. Hablamos a través del deporte y de la moda con el objetivo de acompañarlos en cada momento de sus vidas para que puedan competir, entrenar o lucir su estilo personal, transmitiendo inspiración e innovación.</p>
                 <a href="#">Mira nuestras ofertas</a>
             </div>
@@ -50,27 +50,27 @@
             </div>
                 <div class="item8"><img src="./assets/remera-de-argentina.jpg" alt="">
                     <h2>Remera Fútbol adidas Argentina Hombre</h2>
-                    <p>$27.899</p>
+                    <p><b>$27.899</b></p>
                     <a href="#">Comprar</a>
                 </div>
                 <div class="item9"><img src="./assets/remera-de-boca (1).jpg" alt="">
-                    <h2>Camiseta adidas Boca Juniors</h2>
-                    <p>$30.899</p>
+                    <h2>Camiseta adidas Boca Juniors </h2>
+                    <p><b>$30.899</b></p>
                     <a href="#">Comprar</a>
                 </div>
                 <div class="item10"><img src="./assets/remera-del-city.jpg" alt="">
                 <h2>Camiseta Manchester City Puma Réplica Titular 23-24 Hombre</h2>
-                <p>$51.199</p>
+                <p><b>$51.199</b></p>
                 <a href="#">Comprar</a>
             </div>
                 <div class="item11"><img src="./assets/zapas-nike-1.jpg" alt="">
                     <h2>Zapatillas Running Nike Renew Run 3 Hombre</h2>
-                    <p>$49.299</p>
+                    <p><b>$49.299</b></p>
                     <a href="#">Comprar</a>
                 </div>
                 <div class="item12"><img src="./assets/zapas-nike-2.jpg" alt="">
                     <h2>Zapatillas Entrenamiento Nike Air Max Alpha Trainer 5 Hombre</h2>
-                    <p>$86.999</p>
+                    <p><b>$86.999</b></p>
                     <a href="#">Comprar</a>
                 </div>
             </div>
@@ -88,7 +88,7 @@
         <section>
             <h4>Contactos</h4>
             <p>Lunes a Viernes de 9 a 20 hs / Sábado de 9 a 17 hs</p>
-            <p>Atención al 0810-888-3398</p>
+            <p>Atención al Cliente: 0810-888-3398</p>
             <p>Dirección: Merlo, Avenida Libertador 600</p>
             <div>
                 <h4>Redes</h4>
