--- a/index.html
+++ b/index.html
@@ -3,27 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dafiti</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
-        <div class="content">
-            <div class="menu">
-                <a href="#" class="logo">logo</a>
-                <input type="checkbox" id="menu">
-                <label for="menu">
-                    <img src="./assets/menu (1).png" alt="">
-                </label>
+    <header  class="content">
+                <a href="#" class="logo"><b>dafiti</b></a>
                 <nav class="navbar">
+                    <input type="checkbox" id="menu">
+                    <label for="menu">
+                        <img src="./assets/menu (1).png" alt="">
+                    </label>
                     <ul>
                         <li><a href="#hero">Inicio</a></li>
                         <li><a href="#imagenes">Servicios</a></li>
                         <li><a href="#contactos">Contactos</a></li>
                     </ul>
                 </nav>
-            </div>
-        </div>
     </header>
     <main>
         <section id="hero">
